Uses the "project wide" checkstyle under maven-site

--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.9 2003/12/14 14:14:02 jdt Exp $
+# $Id: project.properties,v 1.10 2003/12/31 18:42:12 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
@@ -52,7 +52,7 @@ maven.test.failure.ignore=true
 maven.junit.fork=true
 
 # Checkstyle file
-maven.checkstyle.properties=${basedir}/checkstyle.xml
+maven.checkstyle.properties=${basedir}/../maven-site/checkstyle.xml
 
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
