added time and date

--- a/astrogrid/maven-site/project.properties
+++ b/astrogrid/maven-site/project.properties
@@ -10,3 +10,7 @@ maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/De
 # UI
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
+
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
