update for the release tags

--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -1,11 +1,11 @@
 ace=<CVS_TAG>
-applications=Itn04_2003_11_14
+applications=Itn04_CodeFreeze
 common=<CVS_TAG>
 community=<CVS_TAG>
 datacenter=It04-2003-11-21
-jes=Itn04_2003_11_14
+jes=Itn04_CodeFreeze
 maven-site=<CVS_TAG>
-mySpace=Itn04_DBBackend
+mySpace=Itn04_CodeFreeze
 ogsa=<CVS_TAG>
 portalB=<CVS_TAG>
 registry=<CVS_TAG>
