made logfile have unique name

--- a/astrogrid/jes/test/java/log4j.properties
+++ b/astrogrid/jes/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.1 2003/11/14 17:17:48 jdt Exp $
+# $Id: log4j.properties,v 1.2 2004/01/07 12:13:22 pah Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -8,7 +8,7 @@
 #
 # Set root category priority to FATAL and its only appenders to CONSOLE and a logfile LOGFILE.
 # Change OFF to DEBUG for more detailed logging
-log4j.rootCategory=OFF, CONSOLE, LOGFILE
+log4j.rootCategory=OFF, CONSOLE, JESLOG
 
 
 #### CONSOLE is set to be a ConsoleAppender using a PatternLayout.
@@ -18,8 +18,8 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
 
 ### File log
-log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=tests.log
-log4j.appender.LOGFILE.Append=FALSE
-log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
+log4j.appender.JESLOG=org.apache.log4j.FileAppender
+log4j.appender.JESLOG.File=jestest.log
+log4j.appender.JESLOG.Append=FALSE
+log4j.appender.JESLOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.JESLOG.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
