fixed properties files to incldue correct repositories

--- a/astrogrid/datacenter/implementations/cdsdelegate/project.properties
+++ b/astrogrid/datacenter/implementations/cdsdelegate/project.properties
@@ -6,3 +6,5 @@ maven.javadoc.overview=${basedir}/src/java/org/astrogrid/datacenter/cds/querier/
 #multiproject
 # generate a jar delivable.
 maven.multiproject.type=jar
+
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
