--- a/astrogrid/datacenter/implementations/http2java/project.properties
+++ b/astrogrid/datacenter/implementations/http2java/project.properties
@@ -3,4 +3,5 @@
 # generate a jar delivable.
 maven.multiproject.type=jar
 
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
 
