--- a/astrogrid/datacenter/implementations/mch/project.properties
+++ b/astrogrid/datacenter/implementations/mch/project.properties
@@ -2,3 +2,5 @@
 #multiproject
 # generate a jar delivable.
 maven.multiproject.type=jar
+
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
