--- a/astrogrid/datacenter/implementations/project.properties
+++ b/astrogrid/datacenter/implementations/project.properties
@@ -7,3 +7,5 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 #license
 maven.license.licenseFile=${basedir}/../LICENSE.txt
 
+
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
