--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -7,3 +7,4 @@ maven.multiproject.includes=*/project.xml,implementations/*/project.xml
 
 
 
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
