--- a/astrogrid/datacenter/client/project.properties
+++ b/astrogrid/datacenter/client/project.properties
@@ -2,4 +2,4 @@
 #multiproject
 # generate a jar delivable.
 maven.multiproject.type=jar
-
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
