--- a/astrogrid/datacenter/implementations/installation-test/project.properties
+++ b/astrogrid/datacenter/implementations/installation-test/project.properties
@@ -3,3 +3,5 @@
 #multiproject
 # generate a jar delivable.
 maven.multiproject.type=jar
+
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
