--- a/astrogrid/datacenter/pal/project.properties
+++ b/astrogrid/datacenter/pal/project.properties
@@ -4,3 +4,5 @@
 # generate a war delivable.
 maven.multiproject.type=war
 
+
+maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
