--- a/astrogrid/applications/test/java/log4j.properties
+++ b/astrogrid/applications/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.6 2003/12/15 15:54:53 pah Exp $
+# $Id: log4j.properties,v 1.7 2004/01/09 00:25:08 pah Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -27,5 +27,5 @@ log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 #switch the digester messages down... 
 log4j.logger.org.apache.commons.digester.Digester=OFF
 log4j.logger.org.apache.commons.beanutils=OFF
-log4j.logger.org.apache.axis=OFF
+log4j.logger.org.apache.axis=ERROR
 
