added location for publishing of war

--- a/astrogrid/warehouse/project.properties
+++ b/astrogrid/warehouse/project.properties
@@ -33,6 +33,14 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 
 # Give the WAR a shorter name than the default.
 maven.war.final.name=warehouse.war
+#deployment - settings for artifact / war.
+# see http://nagoya.apache.org/eyebrowse/ReadMsg?listName=users@maven.apache.org&msgNo=8046
+# and http://maven.apache.org/reference/plugins/artifact/examples.html
+maven.repo.list=astrogrid
+maven.repo.astrogrid=file:///var/www/www/
+maven.repo.astrogrid.directory=maven
+maven.repo.astrogrid.username=maven
+maven.repo.astrogrid.group=cvs
 
 # Display the date on the Maven web site
 maven.xdoc.date = left
