--- a/astrogrid/registry/project.properties
+++ b/astrogrid/registry/project.properties
@@ -15,6 +15,14 @@ maven.ui.banner.background=#00f
 maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
+# settings for artifact / war.
+# see http://nagoya.apache.org/eyebrowse/ReadMsg?listName=users@maven.apache.org&msgNo=8046
+# and http://maven.apache.org/reference/plugins/artifact/examples.html
+maven.repo.list=astrogrid
+maven.repo.astrogrid=file:///var/www/www/
+maven.repo.astrogrid.directory=maven
+maven.repo.astrogrid.username=maven
+maven.repo.astrogrid.group=cvs
 
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
