--- a/astrogrid/applications/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/applications/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,6 +1,6 @@
 
 # Set the enterprise logger category to FATAL and its only appender to CONSOLE.
-log4j.logger.org.astrogrid.applications=ALL, APPCONLOG
+log4j.logger.org.astrogrid.applications=DEBUG, APPCONLOG, CONSOLE
 
 # APPCONLOG is set to be a File appender using a PatternLayout.
 log4j.appender.APPCONLOG=org.apache.log4j.FileAppender
