improved javadoc and site generation

--- a/astrogrid/datacenter/client/project.properties
+++ b/astrogrid/datacenter/client/project.properties
@@ -3,3 +3,7 @@
 # generate a jar delivable.
 maven.multiproject.type=jar
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
+
+#javadoc setup
+maven.javadoc.overview=${basedir}/src/java/org/astrogrid/datacenter/delegate/overview.html
+
