--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -30,3 +30,6 @@ maven.repo.astrogrid.group=cvs
 
 # WAR generation
 maven.war.src=${basedir}/site
+
+# Multiproject Configuration
+maven.multiproject.excludes=project.xml,subproject-template/project.xml
