- excluding explorer project

--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -32,4 +32,4 @@ maven.repo.astrogrid.group=cvs
 maven.war.src=${basedir}/site
 
 # Multiproject Configuration
-maven.multiproject.excludes=project.xml,subproject-template/project.xml
+maven.multiproject.excludes=project.xml,explorer/project.xml,subproject-template/project.xml
