*** empty log message ***

--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -18,15 +18,15 @@ maven.test.failure.ignore=true
 #TEST=true
 
 # Deployment
-maven.repo.central=www.astrogrid.org
-maven.repo.central.directory=/var/www/www/maven
-maven.remote.group=cvs
+#maven.repo.central=www.astrogrid.org
+#maven.repo.central.directory=/var/www/www/maven
+#maven.remote.group=cvs
 
-maven.repo.list=astrogrid
-maven.repo.astrogrid=file:///var/www/www/
-maven.repo.astrogrid.directory=maven
-maven.repo.astrogrid.username=maven
-maven.repo.astrogrid.group=cvs
+#maven.repo.list=astrogrid
+#maven.repo.astrogrid=file:///var/www/www/
+#maven.repo.astrogrid.directory=maven
+#maven.repo.astrogrid.username=maven
+#maven.repo.astrogrid.group=cvs
 
 # WAR generation
 maven.war.src=${basedir}/site
