Added a tag lib and a few mods to allow the config file to be set up from a JSP page.

--- a/astrogrid/mySpace/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/mySpace/src/webapp/WEB-INF/web.xml
@@ -58,10 +58,9 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
-  <!--env-entry>
-    <description>Does this make a blind bit of difference</description>
-  	<env-entry-name>mmcConfigFileURL</env-entry-name>
-  	<env-entry-type>java.lang.String</env-entry-type>
-  </env-entry-->
+  <taglib>
+    <taglib-uri>http://jakarta.apache.org/taglibs/input-1.0</taglib-uri>
+    <taglib-location>/WEB-INF/taglibs-input.tld</taglib-location>
+  </taglib>
 
 </web-app>
