--- a/astrogrid/mySpace/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/mySpace/src/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
 
   <taglib>
     <taglib-uri>http://jakarta.apache.org/taglibs/input-1.0</taglib-uri>
-    <taglib-location>/WEB-INF/taglibs-input.tld</taglib-location>
+    <taglib-location>/WEB-INF/tld/taglibs-input.tld</taglib-location>
   </taglib>
 
 </web-app>
