Tidied up LoginAction code (removed tabs)

--- a/astrogrid/portal/login/project.properties
+++ b/astrogrid/portal/login/project.properties
@@ -1,6 +1,6 @@
 # Remote repository location.
 #maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/,http://www.astrogrid.org/maven-cocoon/
-maven.repo.remote=http://codon.demon.co.uk/installs/java/maven, http://capc49.ast.cam.ac.uk/maven, http://astrogrid.ast.cam.ac.uk/maven, http://www.astrogrid.org/maven, http://www.ibiblio.org/maven
+maven.repo.remote=http://codon.demon.co.uk/installs/java/maven, http://capc49.ast.cam.ac.uk/maven, http://astrogrid.ast.cam.ac.uk/maven, http://www.astrogrid.org/maven, http://www.astrogrid.org/maven-cocoon/, http://www.ibiblio.org/maven
 
 # ChangeLog
 maven.changelog.range=31
