--- a/astrogrid/applications/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/applications/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,11 +1,11 @@
 
-# Set the enterprise logger category to FATAL and its only appender to CONSOLE.
-log4j.logger.org.astrogrid.applications=DEBUG, APPCONLOG, CONSOLE
-
-# APPCONLOG is set to be a File appender using a PatternLayout.
-log4j.appender.APPCONLOG=org.apache.log4j.FileAppender
-log4j.appender.APPCONLOG.File=logs/applicationController.log
-log4j.appender.APPCONLOG.Append=true
-log4j.appender.APPCONLOG.Threshold=ALL
-log4j.appender.APPCONLOG.layout=org.apache.log4j.PatternLayout
-log4j.appender.APPCONLOG.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+## Set the enterprise logger category to FATAL and its only appender to CONSOLE.
+#log4j.logger.org.astrogrid.applications=DEBUG, APPCONLOG, CONSOLE
+#
+## APPCONLOG is set to be a File appender using a PatternLayout.
+#log4j.appender.APPCONLOG=org.apache.log4j.FileAppender
+#log4j.appender.APPCONLOG.File=logs/applicationController.log
+#log4j.appender.APPCONLOG.Append=true
+#log4j.appender.APPCONLOG.Threshold=ALL
+#log4j.appender.APPCONLOG.layout=org.apache.log4j.PatternLayout
+#log4j.appender.APPCONLOG.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
