--- a/astrogrid/warehouse/src/webapp/WEB-INF/classes/AstroGridConfig.properties
+++ b/astrogrid/warehouse/src/webapp/WEB-INF/classes/AstroGridConfig.properties
@@ -51,11 +51,40 @@ DatabaseQuerierClass=org.astrogrid.warehouse.queriers.ogsadai.WarehouseQuerier
 ##directory for local workspace (leave unspecified to use temporary storage).
 #WorkspaceDirectory=
 
+###
+###Data Warehouse Configuration
+###
+# -------------------------------------------
+# Location of OGSA-DAI grid service registry
+# HYDRA
+WAREHOUSE_OgsaDaiHostString=http://hydra.star.le.ac.uk:8082
+WAREHOUSE_OgsaDaiRegistryString=/gdw/services/ogsadai/DAIServiceGroupRegistry
+#
+# CASS123
+#WAREHOUSE_OgsaDaiHostString=http://astrogrid.ast.cam.ac.uk:4040
+#WAREHOUSE_gsaDaiRegistryString=/gdw/services/ogsadai/DAIServiceGroupRegistry
 
+# -------------------------------------------
+# Location of XSLT stylesheet for XML RowSet -> VOTable transformation
+# This is a one-size-fits-all hack that will need replacing.
+WAREHOUSE_XslTransform=http://astrogrid.ast.cam.ac.uk/xslt/ag-warehouse-first.xsl
 
-
-
-
-
-
-
+# -------------------------------------------
+# Location of JVM for shelling out to GdsQueryDelegate
+# If using the JVM in tomcat's JAVA_HOME is acceptable, leave this
+# commented out; only supply it if you want to use a custom JVM
+# for some reason.
+# WAREHOUSE_WarehouseJvm=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
+#
+# Location of executable jar for shelled-out ogsadai call
+# This relative path should work in tomcat if it's started from
+# $TOMCAT_HOME/bin:
+#WAREHOUSE_ExecutableJarPath=../webapps/warehouse/WEB-INF/classes/
+#
+# You can also use an absolute path, eg:
+# cass123
+WAREHOUSE_ExecutableJarPath=/export/home/ogsa-dai-tomcat/webapps/warehouse/WEB-INF/classes/
+# hydra
+#WAREHOUSE_ExecutableJarPath=/home/data/gdw/tomcat1/webapps/warehouse/WEB-INF/classes/
+# 
+WAREHOUSE_ExecutableJarName=astrogrid-ogsadai-delegates.jar
