--- a/astrogrid/jes/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/jes/src/webapp/WEB-INF/web.xml
@@ -63,18 +63,9 @@
     <res-type>java.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
-
-<!--  <env-entry>
-    	<description>URL giving location of the properties file to use for configuration</description>
-  	<env-entry-name>org.astrogrid.config.url</env-entry-name>
-  	<env-entry-type>java.lang.String</env-entry-type>
-  </env-entry>-->
-  <!--
-  <resource-ref>
-  	<res-ref-name>org.astrogrid.config.url</res-ref-name>
-	<res-type>java.lang.String</res-type>
-	<res-auth>Container</res-auth>
-  </resource-ref>
--->
-
+  
+  <taglib>
+    <taglib-uri>http://jakarta.apache.org/taglibs/input-1.0</taglib-uri>
+    <taglib-location>/WEB-INF/tld/taglibs-input-tld-20040115.tld</taglib-location>
+  </taglib>
 </web-app>
