--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -33,3 +33,7 @@ maven.war.src=${basedir}/site
 
 # Multiproject Configuration
 maven.multiproject.excludes=project.xml,explorer/project.xml,subproject-template/project.xml
+
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
