--- a/astrogrid/jes/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/jes/src/webapp/WEB-INF/web.xml
@@ -62,5 +62,12 @@
     <taglib-uri>http://jakarta.apache.org/taglibs/input-1.0</taglib-uri>
     <taglib-location>/WEB-INF/tld/taglibs-input-tld-20040115.tld</taglib-location>
   </taglib>
+  
+  <resource-ref>
+    <description>Datasource to use to access the database</description>
+    <res-ref-name>jdbc/jes-datasource</res-ref-name>
+    <res-type>java.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 
 </web-app>
