fixed bugziilla bug - wrong name for class

--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -23,7 +23,7 @@ DatabaseQuerierClass=org.astrogrid.datacenter.queriers.spi.PluginQuerier
 ### The class must be available on the web application classpath, and implement
 ### org.astrogrid.datacenter.queriers.spi.QuerierSPI interface
 ### Possible Values
-### * org.astrogrid.datacenter.queriers.sql.SqlQuerier - vanilla SQL querier for JDBC databases. try this first.
+### * org.astrogrid.datacenter.queriers.sql.SqlQuerierSPI - vanilla SQL querier for JDBC databases. try this first.
 ### * org.astrogrid.datacenter.queriers.mysql.MySqlQuerier - SQL querier for MySql Database
 ### * org.astrogrid.datacenter.queriers.mssqlserver.MsSqlServerQuerier - SQL querier for Microsoft SQL Server
 ### * org.astrogrid.datacenter.queriers.sybase.SybaseQuerier - SQL querier for Sybase
