added conf entry for merlin datacenter

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,1 +1,7 @@
 mySpaceEndPoint = http://vm06.astrogrid.org:8080/intTest-mySpace/services/MySpaceManager
+merlinDatacenterEndPoint=http://vm07.astrogrid.org:8080/pal/services/AxisDataServer
+
+
+
+
+ 
