fixes to tests and some logging.  Switched logging off by default.

--- a/astrogrid/common/test/java/log4j.properties
+++ b/astrogrid/common/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.1 2004/01/27 13:50:09 jdt Exp $
+# $Id: log4j.properties,v 1.2 2004/01/27 16:21:54 jdt Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -8,7 +8,7 @@
 #
 # Set root category priority to FATAL and its only appenders to CONSOLE and a logfile LOGFILE.
 # Change OFF to DEBUG for more detailed logging
-log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
+log4j.rootCategory=OFF, CONSOLE, LOGFILE
 
 
 #### CONSOLE is set to be a ConsoleAppender using a PatternLayout.
