--- a/astrogrid/portal/registry/project.properties
+++ b/astrogrid/portal/registry/project.properties
@@ -30,3 +30,7 @@ maven.repo.astrogrid.group=cvs
 
 # WAR generation
 maven.war.src=${basedir}/site
+
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
