result of merge from Itn05Start

--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -54,3 +54,16 @@ maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 
 #things that do not seem to be set in all contexts
 maven.test.dest=${basedir}/target/test-classes
+
+#custom javadoc tags...
+maven.javadoc.customtags=tag1 tag2
+tag1.name=TODO
+tag1.description=To Do:
+tag1.enabled=true
+tag1.scope=all
+
+tag2.name=stereotype
+tag2.description=stereotype:
+tag2.enabled=false
+tag2.scope=all
+            
